--- a/README.rdoc
+++ b/README.rdoc
@@ -1,21 +1,34 @@
-== README
+== SCRIPT DE INTEGRAÇÃO HOTMART, MAILCHIMP E HELPSCOUT
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Este é o script para integração entre o Hotmart, MailChimp e HelpScout.
 
-Things you may want to cover:
+* Versão Ruby: 2.1.2
 
-* Ruby version
+* Versão Rails: 4.1.4
 
-* System dependencies
+* Testes: rspec spec
+
+* Code Smell
+  
+  * rails_best_practices -f html .
+
+    * Gera /rails_best_practices_output.html
+
+  * rspec spec
+
+    * Gera /coverage/index.html
+
+* Inicializando Banco de Dados (ambientes de teste e desenvolvimento)
+  
+  * rake db:create
+
+  * rake db:migrate
+
+  * rake db:seed
 
 * Configuration
 
 * Database creation
-
-* Database initialization
-
-* How to run the test suite
 
 * Services (job queues, cache servers, search engines, etc.)
 
