--- a/README.rdoc
+++ b/README.rdoc
@@ -2,11 +2,17 @@
 
 Este é o script para integração entre o Hotmart, MailChimp e HelpScout.
 
-* Versão Ruby: 2.1.2
+* Ruby
 
-* Versão Rails: 4.1.4
+  * 2.1.2
 
-* Testes: rspec spec
+* Rails
+
+  * 4.1.4
+
+* Testes
+
+  * rspec spec
 
 * Code Smell
   
