So many things that I don't have a way to describe what was made

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,3 +22,8 @@
 en:
   api:
     integration: 'Integration'
+    hotmart: 'Hotmart'
+    mailchimp: 'Mailchimp'
+    helpscout: 'Helpscout'
+    key: 'Key'
+    key_updated: "Your %{api_name}'s API Key was successfully updated"
