Finishing ActuationRule STI

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,3 +34,5 @@ en:
 
     rule:
       rules: 'Rules'
+      mailchimp_actuation_rules: 'Mailchimp Actuation Rules'
+      helpscout_actuation_rules: 'Helpscout Actuation Rules'
