Creating Mailchimp and Helpscout Actuation Rules area

--- a/config/locales/en.bootstrap.yml
+++ b/config/locales/en.bootstrap.yml
@@ -20,4 +20,5 @@ en:
       edit: "Edit %{model}"
       save: "Save %{model}"
       new: "New %{model}"
+      actuation_new: "New %{model} - %{method}"
       delete: "Delete %{model}"
