--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,3 +36,4 @@ en:
       rules: 'Rules'
       mailchimp_actuation_rules: 'Mailchimp Actuation Rules'
       helpscout_actuation_rules: 'Helpscout Actuation Rules'
+      rule_associations: 'Association of Rules'
