--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,3 +37,6 @@ en:
       mailchimp_actuation_rules: 'Mailchimp Actuation Rules'
       helpscout_actuation_rules: 'Helpscout Actuation Rules'
       rule_associations: 'Association of Rules'
+
+    notification:
+      logs: 'logs'
